--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,13 @@
             <version>3.2.18</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.13</artifactId>
+            <version>2.6.20</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
