--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>akka-actor_2.13</artifactId>
             <version>2.6.20</version>
         </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-testkit_2.13</artifactId>
+            <version>2.6.20</version>
+        </dependency>
     </dependencies>
 
 
