--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>config</artifactId>
             <version>1.4.3</version>
         </dependency>
+        <dependency>
+            <groupId>io.spray</groupId>
+            <artifactId>spray-json_2.13</artifactId>
+            <version>1.3.6</version>
+        </dependency>
     </dependencies>
 
 
