--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,16 @@
     <name>Akkamelo - Distributed API</name>
     <dependencies>
         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api-scala_2.13</artifactId>
+            <version>13.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.22.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.13</artifactId>
             <version>3.2.18</version>
@@ -29,7 +39,7 @@
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-http_2.13</artifactId>
+            <artifactId>akka-http-spray-json_2.13</artifactId>
             <version>10.2.7</version>
         </dependency>
         <dependency>
@@ -41,6 +51,18 @@
             <groupId>io.spray</groupId>
             <artifactId>spray-json_2.13</artifactId>
             <version>1.3.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.19.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java-util</artifactId>
+            <version>3.19.6</version>
         </dependency>
     </dependencies>
 
