rewired, now using ClientActorSupervisor with forwarding.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,3 +7,15 @@ app: {
 boot: {
   message: "Booting up Akkamelo API "${app.version}
 }
+
+actor: {
+  client: {
+    name: {
+      prefix: "client-"
+      suffix: ""
+    }
+    resolve: {
+      timeout: 5 seconds
+    }
+  }
+}
