--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,6 +6,33 @@ app: {
 
 boot: {
   message: "Booting up Akkamelo API "${app.version}
+  initialClients: [
+    {
+      id: 1,
+      initialBalance: 0,
+      limit: 100000
+    },
+    {
+      id: 2,
+      initialBalance: 0,
+      limit: 80000
+    },
+    {
+      id: 3,
+      initialBalance: 0,
+      limit: 1000000
+    },
+    {
+      id: 4,
+      initialBalance: 0,
+      limit: 10000000
+    },
+    {
+      id: 5,
+      initialBalance: 0,
+      limit: 500000
+    },
+  ]
 }
 
 actor: {
@@ -14,8 +41,8 @@ actor: {
       prefix: "client-"
       suffix: ""
     }
-    resolve: {
-      timeout: 5 seconds
+    supervisor: {
+      timeoutSeconds: 5
     }
   }
 }
