created Dockerfile and docker-compose, needed to do some changess to Boot and application.conf.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,11 @@ app: {
   version: ${app.versionPrefix}-${app.versionNumber}
 }
 
+server: {
+  host: "0.0.0.0"
+  port: 8080
+}
+
 boot: {
   message: "Booting up Akkamelo API "${app.version}
   initialClients: [
