managed to get cassandra and akkamelo to work in the same docker compose and network

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,19 +4,27 @@ app: {
   version: ${app.versionPrefix}-${app.versionNumber}
 }
 
-datastax-java-driver.advanced.reconnect-on-init = true
+datastax-java-driver: {
+  basic: {
+    contact-points = ["cassandra:9042"]
+    load-balancing-policy.local-datacenter = "datacenter1"
+  }
+  advanced: {
+    reconnect-on-init = true
+  }
+}
 
 akka {
   persistence {
     journal.plugin = "akka.persistence.cassandra.journal"
     snapshot-store.plugin = "akka.persistence.cassandra.snapshot"
-  }
 
-  cassandra {
-    snapshot.keyspace-autocreate = true
-    snapshot.tables-autocreate = true
-    journal.keyspace-autocreate = true
-    journal.tables-autocreate = true
+    cassandra {
+      snapshot.keyspace-autocreate = true
+      snapshot.tables-autocreate = true
+      journal.keyspace-autocreate = true
+      journal.tables-autocreate = true
+    }
   }
 }
 
