--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -29,17 +29,27 @@ akka {
 }
 
 server: {
+  enabled: true
   host: "0.0.0.0"
   port: 8080
 }
 
 persistence-test-server: {
+  enabled: false
   host: "0.0.0.0"
   port: 8081
 }
 
 boot: {
+  system: {
+    name: "akkamelo-actorsystem"
+  }
   message: "Booting up Akkamelo API "${app.version}" with Akka persistence"
+
+  initial-register: {
+    timeoutSeconds: 5
+  }
+
   initialClients: [
     {
       id: 1,
