refactored ClientActor to be a persistentActor, I think it works but I need help testing it.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,6 +15,9 @@ datastax-java-driver: {
 }
 
 akka {
+  actor: {
+    allow-java-serialization: on
+  }
   persistence {
     journal.plugin = "akka.persistence.cassandra.journal"
     snapshot-store.plugin = "akka.persistence.cassandra.snapshot"
