added passivation based on time inactive to existing actors, configurable in application.conf. The clientActorSupervisor and it's contract is kinda broken, needs refactoring

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -88,6 +88,7 @@ actor: {
       prefix: "client-"
       suffix: ""
     }
+    passivationTimeoutSeconds: 60
     supervisor: {
       timeoutSeconds: 5
     }
