--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -89,6 +89,7 @@ actor: {
       suffix: ""
     }
     passivationTimeoutSeconds: 60
+    requestTimeoutSeconds: 5
     supervisor: {
       timeoutSeconds: 5
     }
