refactored clientactor to generic actor supervisor. Tests don't run but I'll fix that

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 app: {
-  versionPrefix: "alpha"
-  versionNumber: "0.0.1"
+  versionPrefix: "beta"
+  versionNumber: "1.0.0"
   version: ${app.versionPrefix}-${app.versionNumber}
 }
 
@@ -90,8 +90,5 @@ actor: {
     }
     passivationTimeoutSeconds: 60
     requestTimeoutSeconds: 5
-    supervisor: {
-      timeoutSeconds: 5
-    }
   }
 }
