shaved off most of the old implementation.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,94 +1,1 @@
-app: {
-  versionPrefix: "beta"
-  versionNumber: "1.0.0"
-  version: ${app.versionPrefix}-${app.versionNumber}
-}
-
-datastax-java-driver: {
-  basic: {
-    contact-points = ["cassandra:9042"]
-    load-balancing-policy.local-datacenter = "datacenter1"
-  }
-  advanced: {
-    reconnect-on-init = true
-  }
-}
-
-akka {
-  actor: {
-    allow-java-serialization: on
-  }
-  persistence {
-    journal.plugin = "akka.persistence.cassandra.journal"
-    snapshot-store.plugin = "akka.persistence.cassandra.snapshot"
-
-    cassandra {
-      snapshot.keyspace-autocreate = true
-      snapshot.tables-autocreate = true
-      journal.keyspace-autocreate = true
-      journal.tables-autocreate = true
-    }
-  }
-}
-
-server: {
-  enabled: true
-  host: "0.0.0.0"
-  port: 8080
-}
-
-persistence-test-server: {
-  enabled: false
-  host: "0.0.0.0"
-  port: 8081
-}
-
-boot: {
-  system: {
-    name: "akkamelo-actorsystem"
-  }
-  message: "Booting up Akkamelo API "${app.version}" with Akka persistence"
-
-  initial-register: {
-    timeoutSeconds: 5
-  }
-
-  initialClients: [
-    {
-      id: 1,
-      initialBalance: 0,
-      limit: 100000
-    },
-    {
-      id: 2,
-      initialBalance: 0,
-      limit: 80000
-    },
-    {
-      id: 3,
-      initialBalance: 0,
-      limit: 1000000
-    },
-    {
-      id: 4,
-      initialBalance: 0,
-      limit: 10000000
-    },
-    {
-      id: 5,
-      initialBalance: 0,
-      limit: 500000
-    },
-  ]
-}
-
-actor: {
-  client: {
-    name: {
-      prefix: "client-"
-      suffix: ""
-    }
-    passivationTimeoutSeconds: 60
-    requestTimeoutSeconds: 5
-  }
-}
+# This is where configuration for the application is stored
