--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,8 +1,1 @@
-akka: {
-  persistence: {
-    journal.plugin = "akka.persistence.journal.inmem"
-    snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-
-    snapshot-store.local.dir = "target/snapshots"
-  }
-}
+# These configurations will be used during testing
