--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.13</artifactId>
+            <version>2.6.20</version>
+        </dependency>
+
 
 
         <!-- Dependencies for running Gatling testSuite and akka http -->
@@ -20,11 +26,6 @@
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-http-spray-json_2.13</artifactId>
             <version>10.2.7</version>
-        </dependency>
-        <dependency>
-            <groupId>io.spray</groupId>
-            <artifactId>spray-json_2.13</artifactId>
-            <version>1.3.6</version>
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
@@ -106,4 +107,31 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>gatling-suite</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.4.1</version>
+                        <executions>
+                            <execution>
+                                <id>run</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <mainClass>com.akkamelo.api.gatling.GatlingRunner</mainClass>
+                            <classpathScope>test</classpathScope>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
